turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: reassignment to val
  Blub = rule(state)(id)
       ^